src/css/fix-scrollbar.css
/** IN IFRAME SCROLLBAR */

.in-iframe > *::-webkit-scrollbar {
    width: 6px;
}

/* Handle portion of the scrollbar */
.in-iframe > *::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 6px;
    border: 2px solid var(--color-background-900);
}

/* Track (the area on which the handle moves) */
.in-iframe > *::-webkit-scrollbar-track {
    background-color: transparent;
}

/* Handle on hover */
.in-iframe > *::-webkit-scrollbar-thumb:hover {
    background-color: #555;
}




/** SLIM SCROLLBAR */

.scrollbar-slim::-webkit-scrollbar {
    width: 8px;
}

.scrollbar-slim::-webkit-scrollbar-thumb {
    border-radius: 8px;
    border: 3px solid transparent;
    background-clip: content-box;
    background-color: #959595;
}

